syntax = "proto3";
package dev.yanshouwang.bluetooth_low_energy;

message Message {
  MessageCategory category = 1;
  oneof value {
    bool state = 2;
    StartDiscoveryArguments startDiscoveryArguments = 3;
    bool scanning = 4;
    Discovery discovery = 5;
    ConnectArguments connectArguments = 6;
    GattDisconnectArguments disconnectArguments = 7;
    GattConnectionLost connectionLost = 8;
    GattCharacteristicReadArguments characteristicReadArguments = 9;
    GattCharacteristicWriteArguments characteristicWriteArguments = 10;
    GattCharacteristicNotifyArguments characteristicNotifyArguments = 11;
    GattCharacteristicValue characteristicValue = 12;
    GattDescriptorReadArguments descriptorReadArguments = 13;
    GattDescriptorWriteArguments descriptorWriteArguments = 14;
  }
}

message StartDiscoveryArguments {
  repeated string services = 1;
}

message Discovery {
  string uuid = 1;
  sint32 rssi = 2;
  bytes advertisements = 3;
  bool connectable = 4;
}

message ConnectArguments {
  string uuid = 1;
}

message GATT {
  int32 id = 1;
  int32 mtu = 2;
  repeated GattService services = 3;
}

message GattService {
  int32 id = 1;
  string uuid = 2;
  repeated GattCharacteristic characteristics = 3;
}

message GattCharacteristic {
  int32 id = 1;
  string uuid = 2;
  repeated GattDescriptor descriptors = 3;
  bool canRead = 4;
  bool canWrite = 5;
  bool canWriteWithoutResponse = 6;
  bool canNotify = 7;
}

message GattDescriptor {
  int32 id = 1;
  string uuid = 2;
}

message GattDisconnectArguments{
  string uuid = 1;
  int32 id = 2;
}

message GattConnectionLost {
  int32 id = 1;
  int32 error_code = 2;
}

message GattCharacteristicReadArguments {
  string device_uuid = 1;
  string service_uuid = 2;
  string uuid = 3;
  int32 id = 4;
}

message GattCharacteristicWriteArguments {
  string device_uuid = 1;
  string service_uuid = 2;
  string uuid = 3;
  int32 id = 4;
  bytes value = 5;
  bool withoutResponse = 6;
}

message GattCharacteristicNotifyArguments{
  string device_uuid = 1;
  string service_uuid = 2;
  string uuid = 3;
  int32 id = 4;
  bool state = 5;
}

message GattCharacteristicValue {
  int32 id = 3;
  bytes value = 4;
}

message GattDescriptorReadArguments {
  string device_uuid = 1;
  string service_uuid = 2;
  string characteristic_uuid = 3;
  string uuid = 4;
  int32 id = 5;
}

message GattDescriptorWriteArguments {
  string device_uuid = 1;
  string service_uuid = 2;
  string characteristic_uuid = 3;
  string uuid = 4;
  int32 id = 5;
  bytes value = 6;
}

enum MessageCategory {
  BLUETOOTH_AVAILABLE =0;
  BLUETOOTH_STATE = 1;
  CENTRAL_START_DISCOVERY = 2;
  CENTRAL_STOP_DISCOVERY = 3;
  CENTRAL_DISCOVERED = 4;
  CENTRAL_CONNECT = 5;
  GATT_DISCONNECT = 6;
  GATT_CONNECTION_LOST = 7;
  GATT_CHARACTERISTIC_READ = 8;
  GATT_CHARACTERISTIC_WRITE = 9;
  GATT_CHARACTERISTIC_NOTIFY = 10;
  GATT_DESCRIPTOR_READ = 11;
  GATT_DESCRIPTOR_WRITE = 12;
}